[tool.poetry]
name = "urban-planner-ai"
version = "0.1.0"
description = "An AI urban planner using aijson and AWS Bedrock Llama3.1 405B"
authors = ["Kimani Vincent <kimanivincent2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aijson = "^0.1.0"
aijson-ml = "^0.1.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"